--- a/mercury/Makefile
+++ b/mercury/Makefile
@@ -3,9 +3,10 @@ help:
 	@echo "make [void],"
 	@echo "make help    : Show this help."
 	@echo ""
-	@echo "make reels   : Make the RELEASE reels executable."
+	@echo "make reels   : Make the command line Reels executable."
 	@echo "make test    : Make the DEBUG&TEST reels executable."
-	@echo "make doc     : Build the reels c++ documentation."
+	@echo "make doc_cpp : Build the reels C++ documentation."
+	@echo "make doc_py  : Build the reels Python documentation."
 	@echo ""
 	@echo "make clean   : Clean up all files not stored in the repo."
 	@echo "make package : Clean, compile all and build the mercury-dynamics package."
