--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,31 +1,34 @@
 [build-system]
-requires = ['setuptools>=61.0']
-build-backend = 'setuptools.build_meta'
+requires		= ['setuptools>=61.0']
+build-backend	= 'setuptools.build_meta'
 
 
 [project]
-name = 'mercury-reels'
-license = {file = 'LICENSE.txt'}
-version = '1.4.1'
-authors = [
-  { name='Mercury Team', email='mercury.group@bbva.com' },
-]
-description = 'Reels helps identify patterns in event data and can predict target events.'
-readme = 'README.md'
-requires-python = '>=3.8'
-classifiers = [
+name			= 'mercury-reels'
+license			= {file = 'LICENSE.txt'}
+version			= '1.4.1'
+authors			= [{ name = 'Mercury Team', email = 'mercury.group@bbva.com' }]
+description		= 'Reels helps identify patterns in event data and can predict target events.'
+readme			= 'README.md'
+requires-python	= '>=3.8'
+classifiers		= [
     'Programming Language :: Python :: 3',
     'License :: OSI Approved :: Apache Software License',
     'Operating System :: OS Independent',
 ]
-dependencies = []
+keywords		= ['event detection', 'event prediction', 'time series']
+
+dependencies	= []
 
 
-[tool.setuptools.packages.find]
-include = ['mercury*']
-exclude = ['docs*', 'tests*', 'tutorials']
+[tool.setuptools]
+py-modules		= ['_custom_build']
+
+
+[tool.setuptools.cmdclass]
+build_py		= '_custom_build.build_py'
 
 
 [project.urls]
-'Homepage' = 'https://github.com/BBVA/mercury-reels'
-'Bug Tracker' = 'https://github.com/BBVA/mercury-reels/issues'
+'Homepage'		= 'https://github.com/BBVA/mercury-reels'
+'Bug Tracker'	= 'https://github.com/BBVA/mercury-reels/issues'
