Commits before renaming the folder

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,11 @@ py-modules		= ['_custom_build']
 build_py		= '_custom_build.build_py'
 
 
+[tool.setuptools.packages.find]
+include			= ['mercury*', 'mercury/reels*']
+exclude			= ['catch2*', 'docs*', 'notebooks*', 'test_all.py']
+
+
 [project.urls]
 'Homepage'		= 'https://github.com/BBVA/mercury-reels'
 'Bug Tracker'	= 'https://github.com/BBVA/mercury-reels/issues'
