Avoids stop at error to show the error message

--- a/src/Makefile
+++ b/src/Makefile
@@ -69,7 +69,7 @@ doc_cpp:
 
 .PHONY	: doc_py
 doc_py:
-	@mkdocs build 2>errors.log 1>/dev/null
+	@-mkdocs build 2>errors.log 1>/dev/null
 	@cat errors.log | grep -vE 'No type or annotation for'
 
 .PHONY	: package
