--- a/.github/workflows/pypi_upload.yaml
+++ b/.github/workflows/pypi_upload.yaml
@@ -14,12 +14,10 @@ jobs:
         with:
           python-version: '3.x'
       - name: Build package
-        run: |
-          python -m setup.py sdist
+        run:  python setup.py bdist_wheel
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
         with:
           user: ${{ secrets.pypi_user }}
           password: ${{ secrets.pypi_password }}
           packages_dir: ./dist/
-
