--- a/.github/workflows/pypi_upload.yaml
+++ b/.github/workflows/pypi_upload.yaml
@@ -14,7 +14,7 @@ jobs:
         with:
           python-version: '3.10'
       - name: Build package
-        run:  python setup.py bdist_wheel
+        run:  python3.10 setup.py bdist_wheel
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
         with:
