--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ build-backend	= 'setuptools.build_meta'
 
 [project]
 name			= 'mercury-reels'
+version			= '1.4.1'
 description		= 'Reels helps identify patterns in event data and can predict target events.'
 license			= {file = "LICENSE.txt"}
 requires-python = '>=3.8'
