--- a/.github/workflows/pypi_upload.yaml
+++ b/.github/workflows/pypi_upload.yaml
@@ -13,6 +13,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - name: Install dependencies
+        run: |
+          python -m pip3.10 install --upgrade pip
+          pip3.10 install wheel
+          pip3.10 install build
       - name: Build package
         run:  python3.10 setup.py bdist_wheel
       - name: Publish package
