--- a/.github/workflows/pypi_upload.yaml
+++ b/.github/workflows/pypi_upload.yaml
@@ -18,10 +18,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install wheel
           pip install build
-      - name: Build package
-        run:  python setup.py bdist_wheel
-        run:  python3.10 setup.py bdist_wheel
-        run:  python setup.py sdist
+      - name: Build packages
+        run: |
+          python setup.py bdist_wheel
+          python3.10 setup.py bdist_wheel
+          python setup.py sdist
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
         with:
