--- a/.github/workflows/pypi_upload.yaml
+++ b/.github/workflows/pypi_upload.yaml
@@ -20,7 +20,7 @@ jobs:
           pip install build
       - name: Build packages
         run: |
-          python setup.py sdist
+          python -m build
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
         with:
